@@ -1,5 +1,13 @@
 2006-12-21  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * agent/seahorse-agent-main.c:
+    * daemon/seahorse-daemon.c:
+    * plugins/nautilus/seahorse-pgp-preferences.c:
+    * plugins/nautilus/seahorse-tool.c: Use GOption for parsing command 
+    line arguments. Fixes bug #336146
+
+2006-12-21  Nate Nielsen  <nielsen@memberwebs.com>
+
     * agent/seahorse-agent-cache.c:
     * agent/seahorse-agent-main.c:
     * daemon/seahorse-daemon.c:
